# nba-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  LICENSE  Makefile  README.md  constraints.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  pre-commit.yml
scripts/: bootstrap.sh  cfix.sh  coverage_gaps.py  pc.sh
src/: __init__.py  config.py
src/data/: __init__.py  br_client.py  br_parse.py  elo.py  features.py  fetch.py  transform.py
src/model/: __init__.py  datasets.py  metrics.py  models.py  select.py  train.py  trainer.py
src/service/: __init__.py  app.py  core.py  deps.py  errors.py  handler.py  normalizer.py  routes.py  schemas.py
src/utils/: logging.py
tests/: conftest.py  test_br_client.py  test_br_parse.py  test_features.py  test_fetch_integration.py  test_service_core.py  test_service_deps.py  test_service_routes.py  test_train.py  test_train_multi.py  test_trainer.py  test_transform.py
tests/fixtures/: features_mini.csv  games_mini.csv  model_mini.joblib
tests/unit/: test_br_client.py  test_br_parse.py  test_datasets.py  test_deps.py  test_elo.py  test_features.py  test_fetch.py  test_fetch_integration.py  test_metrics.py  test_models.py  test_normalizer.py  test_select.py  test_service_core.py  test_service_deps.py  test_service_routes.py  test_train.py  test_train_multi.py  test_trainer.py  test_transform.py
