[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-predictor"
version = "0.1.0"
description = "Predict NBA game outcomes with a clean FastAPI service and reproducible ML pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["nba", "machine-learning", "fastapi", "sports", "prediction"]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.7",
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.0",
  "ruff>=0.6.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-requests",
  # optional:
  "pip-tools",
]

[tool.setuptools.packages.find]
# IMPORTANT: search from repo root and include the 'src' package and its subpackages
where = ["."]
include = ["src*"]

# If you ship static files later, add them here
# [tool.setuptools.package-data]
# "src" = ["**/*.json"]

# -------------------- Tooling configs --------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
filterwarnings = [
  "error",
  "ignore:.*The `disp` and `iprint` options of the L-BFGS-B solver are deprecated.*:DeprecationWarning:sklearn.linear_model._logistic",
]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E203"]
format.preview = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "sklearn.*",
  "httpx.*",
  "bs4.*",
]
ignore_missing_imports = true
