[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-predictor"
version = "0.1.0"
description = "Predict NBA game outcomes with a clean FastAPI service and reproducible ML pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["nba", "machine-learning", "fastapi", "sports", "prediction"]

dependencies = [
  "fastapi>=0.116.2",
  "starlette>=0.48.0,<0.49.0",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.7",
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.6",
  "pytest-xdist>=3.6",
  "pytest-html>=4.1",
  "pytest-sugar>=1.0",
  "pytest-randomly>=3.15",
  "hypothesis>=6.0",
  "ruff>=0.6.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-requests",
  "pip-tools",
  "diff-cover>=9.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
xfail_strict = true
markers = [
  "integration: slow/IO-heavy tests",
]
filterwarnings = [
  "error::DeprecationWarning:src.*",
  "ignore:.*The `disp` and `iprint` options of the L-BFGS-B solver are deprecated.*:DeprecationWarning:sklearn.linear_model._logistic",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E203"]
format.preview = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src", "scripts"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_unreachable = true
strict = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "sklearn.*",
  "httpx.*",
  "bs4.*",
  "joblib.*",
  "fastapi.*",
  "mangum",
  "mangum.*"
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 0

[tool.coverage.html]
directory = "coverage_html"
show_contexts = true
